@@ -1,20 +1,29 @@
 package com.sparta.outsourcing.service;
 
+import com.sparta.outsourcing.dto.RestaurantDto;
 import com.sparta.outsourcing.dto.ReviewDto;
 import com.sparta.outsourcing.entity.Order;
+import com.sparta.outsourcing.entity.Restaurant;
 import com.sparta.outsourcing.entity.Review;
 import com.sparta.outsourcing.entity.User;
 import com.sparta.outsourcing.enums.UserRoleEnum;
+import com.sparta.outsourcing.exception.InvalidAccessException;
 import com.sparta.outsourcing.repository.OrderRepository;
 import com.sparta.outsourcing.repository.ReviewRepository;
 import com.sparta.outsourcing.security.UserDetailsImpl;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.MessageSource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -23,47 +32,52 @@ public class ReviewService {
 
     private final OrderRepository orderRepository;
     private final ReviewRepository reviewRepository;
+    private final MessageSource messageSource;
 
     @Autowired
-    public ReviewService(OrderRepository orderRepository, ReviewRepository reviewRepository) {
+    public ReviewService(OrderRepository orderRepository, ReviewRepository reviewRepository, MessageSource messageSource) {
         this.orderRepository = orderRepository;
         this.reviewRepository = reviewRepository;
+        this.messageSource = messageSource;
     }
 
     public ResponseEntity<String> addReview(ReviewDto reviewDto) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
-            throw new IllegalStateException("인증되지 않은 사용자입니다.");
-        }
-        UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
-        User user = userDetails.getUser();
+        User user = getUser();
 
         Optional<Order> optionalOrder = orderRepository.findById(reviewDto.getOrderId());
+
         if (optionalOrder.isPresent()) {
             Order order = optionalOrder.get();
-
-            Review review = new Review(user, order, reviewDto.getContent());
-
-            reviewRepository.save(review);
-            return ResponseEntity.ok("리뷰가 성공적으로 작성되었습니다.");
+            if (order.getUser().getUsername().equals(user.getUsername()) || user.getRole().equals(UserRoleEnum.ADMIN)) {
+                Review review = new Review(user, order, reviewDto.getContent());
+                reviewRepository.save(review);
+                return ResponseEntity.ok("리뷰가 성공적으로 작성되었습니다.");
+            } else {
+                throw new InvalidAccessException(messageSource.getMessage(
+                        "invalid.access", null, "적합하지 않은 접근입니다.", Locale.getDefault()));
+            }
         } else {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("주문 정보가 존재하지 않습니다.");
         }
     }
 
-    public List<ReviewDto> getAllReviews() {
-        return reviewRepository.findAll().stream()
-                .map(ReviewDto::toDto)
-                .toList();
+    public ResponseEntity<List<ReviewDto>> getAllReviews(int page, int size) {
+
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Review> reviewPage = reviewRepository.findAll(pageable);
+        List<ReviewDto> reviewDtoList = reviewPage.getContent().stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(reviewDtoList);
+    }
+
+    private ReviewDto convertToDto(Review review) {
+        return new ReviewDto(review.getOrder().getOrderId(), review.getContent());
     }
 
     public ResponseEntity<String> updateReview(Long reviewId, ReviewDto reviewDto) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
-            throw new IllegalStateException("인증되지 않은 사용자입니다.");
-        }
-        UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
-        User user = userDetails.getUser();
+        User user = getUser();
 
         Optional<Review> optionalReview = reviewRepository.findById(reviewId);
         if (optionalReview.isPresent()) {
@@ -82,13 +96,7 @@ public class ReviewService {
     }
 
     public ResponseEntity<String> deleteReview(Long reviewId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
-            throw new IllegalStateException("인증되지 않은 사용자입니다.");
-        }
-        UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
-        User user = userDetails.getUser();
-
+        User user = getUser();
         Optional<Review> optionalReview = reviewRepository.findById(reviewId);
         if (optionalReview.isPresent()) {
             Review review = optionalReview.get();
@@ -101,6 +109,23 @@ public class ReviewService {
         } else {
             return ResponseEntity.notFound().build();
         }
+    }
+
+    private static User getUser() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new IllegalStateException("인증되지 않은 사용자입니다.");
+        }
+
+        // Principal이 UserDetailsImpl 타입인지 확인
+        Object principal = authentication.getPrincipal();
+        if (!(principal instanceof UserDetailsImpl)) {
+            throw new IllegalStateException("사용자 정보를 가져올 수 없습니다.");
+        }
+
+        UserDetailsImpl userDetails = (UserDetailsImpl) principal;
+        User currentUser = userDetails.getUser();
+        return currentUser;
     }
 
 }
